<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_agregar_participante"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.costurero.picolab.costureroviajero.AgregarParticipanteActivity">
    <LinearLayout

        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/menuFotosVideos_ly"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <TextView
            android:text="@string/agregar_participante"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tituloParticipantes_txt"
            android:textSize="36sp"
            android:textAlignment="center"
            android:textColorHint="@android:color/background_dark" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/nombreParticipante_inp"
            android:hint="@string/hint_participante" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/fotoParticipante_ly">

            <TextView
                android:text="Fotografía (Opcional)"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/fotoParticipante_lbl"
                android:layout_weight="1"
                android:textSize="18sp" />

            <Button
                android:text="@string/sel_foto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/seleccionarFoto_but"
                android:layout_weight="2"
                android:layout_marginLeft="0dp" />

            <Button
                android:text="@string/tom_foto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tomarFoto_but"
                android:layout_weight="2"
                android:layout_marginRight="400dp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/fotografiaPart_ly"
            android:layout_marginBottom="90dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/foto_ejemplo"
                android:id="@+id/fotoParticipante_img"
                android:layout_weight="1"
                android:layout_marginBottom="0dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/historiaParticipante_mul"
                android:layout_weight="1"
                android:layout_marginBottom="0dp"
                android:hint="Historia"
                android:gravity="top"
                android:focusableInTouchMode="false" />

            <Button
                android:text="@string/crear_participante"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/crearParticipante_but"
                android:layout_weight="1.5"
                android:layout_gravity="center_vertical" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/barraBaja_ly">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="?android:attr/windowActionBar"
            android:fadeScrollbars="false"
            android:gravity="bottom"
            android:layout_weight="1"
            android:id="@+id/barraBot_ly">

            <Button
                android:text="@string/menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/botonMenu_but"
                android:layout_weight="1"
                android:textSize="18sp"
                android:onClick="abrirMenu" />

            <Button
                android:text="@string/costureros_encuentros"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/botonCostureros_but"
                android:layout_weight="1"
                android:textSize="18sp"
                android:onClick="abrirCostureros" />

            <Button
                android:text="@string/galeria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/botonGalerias_but"
                android:layout_weight="1"
                android:textSize="18sp"
                android:onClick="abrirGaleria" />

            <Button
                android:text="@string/proyecto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/botonProy_but"
                android:layout_weight="1"
                android:textSize="18sp"
                android:onClick="abrirInfo (AgregarParticipanteActivity)" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
