<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_galeria"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.costurero.picolab.costureroviajero.GaleriaActivity">
    <LinearLayout

        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/menuFotosVideos_ly"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <TextView
            android:text="@string/galeria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tituloGaleria_txt"
            android:textSize="36sp"
            android:textAlignment="center"
            android:textColorHint="@android:color/background_dark" />
        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerFotos_lst"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/barraBaja_ly"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="?android:attr/windowActionBar"
            android:fadeScrollbars="false"
            android:gravity="bottom"
            android:layout_weight="1"
            android:id="@+id/barraBot_ly">

            <Button
                android:text="@string/menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/botonMenu_but"
                android:layout_weight="1"
                android:textSize="18sp"
                android:onClick="abrirMenu" />

            <Button
                android:text="@string/costureros_encuentros"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/botonCostureros_but"
                android:layout_weight="1"
                android:textSize="18sp"
                android:onClick="abrirCostureros" />

            <Button
                android:text="@string/galeria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/botonGalerias_but"
                android:layout_weight="1"
                android:textSize="18sp"
                android:onClick="abrirGaleria"
                android:enabled="false" />

            <Button
                android:text="@string/proyecto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/botonProy_but"
                android:layout_weight="1"
                android:textSize="18sp"
                android:onClick="abrirInfo" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
