<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_agregar_video"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.costurero.picolab.costureroviajero.AgregarVideoActivity">
    <LinearLayout

        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/menuFotosVideos_ly"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <TextView
            android:text="@string/video"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tituloAgVideo_txt"
            android:textSize="36sp"
            android:textAlignment="center"
            android:textColorHint="@android:color/background_dark" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:id="@+id/etiquetasPrincipales_rg"
                android:checkedButton="@+id/etiquetaFija1_tog">

                <RadioButton
                    android:text="@string/etiqueta1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/etiquetaFija1_tog"
                    android:layout_weight="1" />

                <RadioButton
                    android:text="@string/etiqueta2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/etiquetaFija2_tog"
                    android:layout_weight="1" />

                <RadioButton
                    android:text="@string/etiqueta3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/etiquetaFija3_tog"
                    android:layout_weight="1" />

            </RadioGroup>

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/etiquetasPrestablecidas_ly">

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/videoEsquema_ly"
            android:layout_marginBottom="45dp"
            android:gravity="left"
            android:layout_gravity="left"
            android:layout_marginTop="10dp">

            <FrameLayout
                android:layout_width="516dp"
                android:layout_height="350dp"
                android:layout_gravity="center">

                <!-- This for video thumbnail-->
                <VideoView
                    android:layout_width="800dp"
                    android:layout_height="350dp"
                    android:orientation="horizontal"
                    android:id="@+id/video_vid"
                    android:layout_weight="1" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="bottom|left"
                    app:srcCompat="@android:drawable/ic_media_play"
                    android:id="@+id/imageView2"
                    android:clickable="true"
                    android:onClick="playVideo" />

                <!-- This for video icon in center-->

            </FrameLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:id="@+id/agregarEtiquetas_ly"
                android:weightSum="1">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine|textCapSentences"
                    android:ems="10"
                    android:id="@+id/historiaVideo_inp"
                    android:hint="@string/etiquetal2"
                    android:layout_weight="1.01" />

                <Button
                    android:text="@string/guardarF"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/guardarFoto_but"
                    android:layout_marginTop="50dp"
                    android:onClick="guardarVideo" />

                <Button
                    android:text="@string/eliminarF"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/eliminarFoto_but"
                    android:onClick="cancelar" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/barraBaja_ly">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="?android:attr/windowActionBar"
            android:fadeScrollbars="false"
            android:gravity="bottom"
            android:layout_weight="1"
            android:id="@+id/barraBot_ly">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/botonMenu_but"
                android:layout_weight="1"
                android:textSize="18sp"
                android:onClick="abrirMenu"
                android:background="@drawable/menu_a" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/botonCostureros_but"
                android:layout_weight="1"
                android:textSize="18sp"
                android:onClick="abrirCostureros"
                android:background="@drawable/menu_b" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/botonGalerias_but"
                android:layout_weight="1"
                android:textSize="18sp"
                android:onClick="abrirGaleria"
                android:background="@drawable/menu_c" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/botonProy_but"
                android:layout_weight="1"
                android:textSize="18sp"
                android:onClick="abrirInfo (AgregarVideoActivity)"
                android:background="@drawable/menu_d" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
