<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_agregar_foto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.costurero.picolab.costureroviajero.AgregarFotoActivity"
    android:background="@drawable/bg">
    <LinearLayout

        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/menuFotosVideos_ly"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <TextView
            android:text="@string/foto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tituloAgFoto_txt"
            android:textSize="36sp"
            android:textAlignment="center"
            android:textColorHint="@android:color/background_dark"
            android:textColor="@color/color_b" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/etiquetasPrestablecidas_ly">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:id="@+id/etiquetasPrincipales_rg"
                android:checkedButton="@+id/etiquetaFija1_tog">

                <RadioButton
                    android:text="@string/etiqueta1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/etiquetaFija1_tog"
                    android:layout_weight="1"
                    android:textSize="18sp" />

                <RadioButton
                    android:text="@string/etiqueta2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/etiquetaFija2_tog"
                    android:layout_weight="1"
                    android:textSize="18sp" />

                <RadioButton
                    android:text="@string/etiqueta3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/etiquetaFija3_tog"
                    android:layout_weight="1"
                    android:textSize="18sp" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/fotoEsquema_ly"
            android:layout_marginBottom="45dp"
            android:gravity="left"
            android:layout_gravity="left"
            android:layout_marginTop="10dp">

            <ImageView
                android:layout_width="800dp"
                app:srcCompat="@drawable/foto_ejemplo"
                android:id="@+id/fotoAgregada_img"
                android:layout_weight="1"
                android:layout_gravity="left"
                android:layout_height="340dp" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="393dp"
                android:layout_height="match_parent"
                android:id="@+id/agregarEtiquetas_ly"
                android:weightSum="1">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine|textCapSentences"
                    android:ems="10"
                    android:id="@+id/etiquetaLibre1_inp"
                    android:hint="@string/etiquetal1"
                    android:layout_weight="0.98" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="77dp">

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/guardarFoto_but"
                        android:onClick="guardarFoto"
                        android:background="@drawable/guardar"
                        android:layout_gravity="center"
                        android:layout_weight="1" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/eliminarFoto_but"
                        android:onClick="cancelar"
                        android:layout_gravity="center"
                        android:background="@drawable/cancelar"
                        android:layout_marginTop="0dp"
                        android:layout_weight="1" />

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/barraBaja_ly">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="?android:attr/windowActionBar"
            android:fadeScrollbars="false"
            android:gravity="bottom"
            android:layout_weight="1"
            android:id="@+id/barraBot_ly"
            android:backgroundTint="@color/colorAccent">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/botonMenu_but"
                android:layout_weight="1"
                android:textSize="18sp"
                android:onClick="abrirMenu"
                android:background="@drawable/menu_a" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/botonCostureros_but"
                android:layout_weight="1"
                android:textSize="18sp"
                android:onClick="abrirCostureros"
                android:background="@drawable/menu_c" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/botonGalerias_but"
                android:layout_weight="1"
                android:textSize="18sp"
                android:onClick="abrirGaleria"
                android:background="@drawable/menu_b" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/botonProy_but"
                android:layout_weight="1"
                android:textSize="18sp"
                android:onClick="abrirInfo (AgregarFotoActivity)"
                android:background="@drawable/menu_d" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
